feat: documented almost all api routes feat: you can upload files now
